--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,14 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-   
-    
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
   ],
   "files": [
     "./src/index.tsx"
-]
+  ]
 }
